--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!-- favicon -->
     <link rel="shortcut icon" href="img/segitiga.png">
     <!-- css gue -->
@@ -730,6 +731,117 @@
                     </div>
                 </div>
             </section>
+            <section id="video">
+                <div class="container pt-5 pb-5 px-5">
+                    <div class="row justify-content-center mb-4">
+                        <div class="col-md-7 text-center">
+                            <h1 class="mb-3 text-dark quote">Our <span class="judul">Moments</span></h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="text-center embed-responsive">
+                            <iframe class="pideo" src="https://www.youtube.com/embed/3MlI-7cVGos"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <footer class="footer">
+                <div class="container px-5">
+                    <div class="row">
+                        <div class="col-md pt-5 text-md-start">
+                            <img src="img/logo.png">
+                            <p class="text-white pt-3">HIMAMO merupakan himpunan pertama yang didirikan di kampus
+                                Politeknik Manufaktur Negeri Bandung.
+                            </p>
+                            <ul class="footer-social list-unstyled pt-1">
+                                <li class="">
+                                    <a class="ig" target="_blank" href="https://www.instagram.com/himamo_polman/"><i
+                                            class="text-white bi bi-instagram"></i></a></li>
+                                <li class=""><a class="yt" target="_blank"
+                                        href="https://www.youtube.com/channel/UC0ZEfY5moa9gWIIksG3aflw"><i
+                                            class="text-white bi bi-youtube"></i></a></li>
+                                <li class=""><a class="email" target="_blank" href="mailto:Officialhimamo@gmail.com"><i
+                                            class="text-white bi bi-envelope-fill"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md pt-5 text-md-start">
+                            <h4 class="text-white quote">Helpful Links</h4>
+                            <ul class="list-unstyled pt-1 text-white">
+                                <li class="">
+                                    <span>
+
+                                        <i class="pe-3 footericon bi bi-globe"></i>
+                                        <a target="_blank" href="" http://ae.polman-bandung.ac.id/"
+                                            class="text-white d-inline-block">
+                                            Website Automation Engineering
+                                        </a>
+                                    </span>
+                                </li>
+                                <li class="">
+                                    <span>
+                                        <a target="_blank" href="https://polman-bandung.ac.id/"
+                                            class="pt-3 text-white d-inline-block">
+                                            <i class="pe-3 footericon bi bi-globe d-inline-block"></i>
+                                            Website Politeknik Manufaktur Bandung
+                                        </a>
+                                    </span>
+                                </li>
+                                <li class="">
+                                    <span>
+                                        <i class="pe-3 footericon bi bi-diagram-3-fill"></i>
+                                        <a target="_blank"
+                                            href="https://himamo.org/assets/images/organigram/himamo-24.jpg"
+                                            class="pt-3 text-white d-inline-block">
+                                            Organigram Himamo
+                                        </a>
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-md pt-5 text-md-start">
+                            <h4 class="text-white quote">Have a Question ?</h4>
+                            <ul class="list-unstyled pt-1 text-white">
+                                <li class="">
+                                    <span>
+
+                                        <p class="d-inline-block">
+                                            <i class="pe-3 footericon bi bi-map-fill"></i>
+                                            Jl.Kanayakan No 21,Dago,Bandung
+                                        </p>
+                                    </span>
+                                </li>
+                                <li class="">
+                                    <span>
+                                        <i class="footericon bi bi-envelope-fill"></i>
+                                        <p class="ps-3 d-inline-block">
+                                            Officialhimamo@gmail.com
+                                        </p>
+                                    </span>
+                                </li>
+                                <li class="">
+                                    <span>
+                                        <i class="footericon bi bi-globe"></i>
+                                        <p class="ps-3 d-inline-block">
+                                            Himamo.org
+                                        </p>
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="credit">
+                    <div class="container pt-3 px-5">
+                        <p class="">Copyright ©2021 All rights reserved | Made With <span><i
+                                    class='bx bxs-heart'></i></span> By <span class="text-white">KOMINFO Division</span>
+                        </p>
+                    </div>
+                </div>
+            </footer>
         </div>
         <!--Container Main end-->
         <!--jquery-->
