--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="credit">
+                <div class="credit py-2">
                     <div class="container pt-3 px-5">
                         <p class="">Copyright ©2021 All rights reserved | Made With <span><i
                                     class='bx bxs-heart'></i></span> By <span class="text-white">KOMINFO Division</span>
