--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> -->
     <!-- favicon -->
     <link rel="shortcut icon" href="img/segitiga.png">
     <!-- css gue -->
@@ -253,7 +253,10 @@
 
 <body>
 
-    <body id="body-pd">
+    <body onload="load()" id="body-pd">
+        <div id="loading">
+            <img class="heartbeat" src="img/load.png">
+        </div>
         <header class="header" id="header">
             <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
             <div class="row">
@@ -354,6 +357,9 @@
                         </button>
                     </div>
                     <!-- </div> -->
+                    <a class="text-center" href="#about">
+                        <div class="scroll-down"></div>
+                    </a>
                 </div>
             </section>
 
@@ -760,12 +766,12 @@
                             <ul class="footer-social list-unstyled pt-1">
                                 <li class="">
                                     <a class="ig" target="_blank" href="https://www.instagram.com/himamo_polman/"><i
-                                            class="text-white bi bi-instagram"></i></a></li>
+                                            class='text-white bx bxl-instagram'></i></a></li>
                                 <li class=""><a class="yt" target="_blank"
                                         href="https://www.youtube.com/channel/UC0ZEfY5moa9gWIIksG3aflw"><i
-                                            class="text-white bi bi-youtube"></i></a></li>
+                                            class='text-white bx bxl-youtube'></i></i></a></li>
                                 <li class=""><a class="email" target="_blank" href="mailto:Officialhimamo@gmail.com"><i
-                                            class="text-white bi bi-envelope-fill"></i></a></li>
+                                            class='text-white bx bxs-envelope'></i></a></li>
                             </ul>
                         </div>
                         <div class="col-md pt-5 text-md-start">
@@ -773,11 +779,10 @@
                             <ul class="list-unstyled pt-1 text-white">
                                 <li class="">
                                     <span>
-
-                                        <i class="pe-3 footericon bi bi-globe"></i>
-                                        <a target="_blank" href="" http://ae.polman-bandung.ac.id/"
+                                        <a target="_blank" href="http://ae.polman-bandung.ac.id/"
                                             class="text-white d-inline-block">
-                                            Website Automation Engineering
+                                            <i class='pe-3 footericon bx bx-globe'></i>
+                                            Website Jurusan AE
                                         </a>
                                     </span>
                                 </li>
@@ -785,17 +790,18 @@
                                     <span>
                                         <a target="_blank" href="https://polman-bandung.ac.id/"
                                             class="pt-3 text-white d-inline-block">
-                                            <i class="pe-3 footericon bi bi-globe d-inline-block"></i>
-                                            Website Politeknik Manufaktur Bandung
+                                            <i class='pe-3 footericon bx bx-globe'></i>
+                                            Website POLMAN
                                         </a>
                                     </span>
                                 </li>
                                 <li class="">
                                     <span>
-                                        <i class="pe-3 footericon bi bi-diagram-3-fill"></i>
+
                                         <a target="_blank"
                                             href="https://himamo.org/assets/images/organigram/himamo-24.jpg"
                                             class="pt-3 text-white d-inline-block">
+                                            <i class='pe-3 footericon bx bx-sitemap'></i>
                                             Organigram Himamo
                                         </a>
                                     </span>
@@ -807,25 +813,24 @@
                             <ul class="list-unstyled pt-1 text-white">
                                 <li class="">
                                     <span>
-
                                         <p class="d-inline-block">
-                                            <i class="pe-3 footericon bi bi-map-fill"></i>
+                                            <i class='pe-3 footericon bx bxs-map-alt'></i>
                                             Jl.Kanayakan No 21,Dago,Bandung
                                         </p>
                                     </span>
                                 </li>
                                 <li class="">
                                     <span>
-                                        <i class="footericon bi bi-envelope-fill"></i>
-                                        <p class="ps-3 d-inline-block">
+                                        <p class="d-inline-block">
+                                            <i class='pe-3 footericon bx bxs-envelope'></i>
                                             Officialhimamo@gmail.com
                                         </p>
                                     </span>
                                 </li>
                                 <li class="">
                                     <span>
-                                        <i class="footericon bi bi-globe"></i>
-                                        <p class="ps-3 d-inline-block">
+                                        <p class="d-inline-block">
+                                            <i class='pe-3 footericon bx bx-globe'></i>
                                             Himamo.org
                                         </p>
                                     </span>
@@ -895,6 +900,13 @@
 
                 // Your code to run since DOM is loaded and ready
             });
+        </script>
+        <script>
+            var preloader = document.getElementById("loading");
+
+            function load() {
+                preloader.style.display = 'none';
+            }
         </script>
     </body>
 
