--- a/contact-form.html
+++ b/contact-form.html
@@ -9,7 +9,7 @@
     <!-- bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!-- favicon -->
     <link rel="shortcut icon" href="img/segitiga.png">
     <!-- css gue -->
@@ -253,10 +253,7 @@
 
 <body>
 
-    <body onload="load()" id="body-pd">
-        <div id="loading">
-            <img class="heartbeat" src="img/load.png">
-        </div>
+    <body id="body-pd">
         <header class="header" id="header">
             <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
             <div class="row">
@@ -297,7 +294,7 @@
                                 class="nav_name">Division</span> </a>
                         <a href="#leader" class="nav_link"> <i class='bx bxs-user-account nav_icon'></i><span
                                 class="nav_name">Leadership</span> </a>
-                        <a href="./404.html" class="nav_link"> <i class='bx bx-rss nav_icon'></i></i> <span
+                        <a href="#" class="nav_link"> <i class='bx bx-rss nav_icon'></i></i> <span
                                 class="nav_name">Blog</span> </a>
                         <!-- <a href="http://ae.polman-bandung.ac.id/" class="nav_link"> <i class='bx bxs-school'></i><span
                                 class="nav_name">Website AE</span> </a> -->
@@ -357,9 +354,6 @@
                         </button>
                     </div>
                     <!-- </div> -->
-                    <a class="text-center" href="#about">
-                        <div class="scroll-down"></div>
-                    </a>
                 </div>
             </section>
 
@@ -766,56 +760,45 @@
                             <ul class="footer-social list-unstyled pt-1">
                                 <li class="">
                                     <a class="ig" target="_blank" href="https://www.instagram.com/himamo_polman/"><i
-                                            class='text-white bx bxl-instagram'></i></a></li>
+                                            class="text-white bi bi-instagram"></i></a></li>
                                 <li class=""><a class="yt" target="_blank"
                                         href="https://www.youtube.com/channel/UC0ZEfY5moa9gWIIksG3aflw"><i
-                                            class='text-white bx bxl-youtube'></i></i></a></li>
+                                            class="text-white bi bi-youtube"></i></a></li>
                                 <li class=""><a class="email" target="_blank" href="mailto:Officialhimamo@gmail.com"><i
-                                            class='text-white bx bxs-envelope'></i></a></li>
+                                            class="text-white bi bi-envelope-fill"></i></a></li>
                             </ul>
                         </div>
                         <div class="col-md pt-5 text-md-start">
                             <h4 class="text-white quote">Helpful Links</h4>
                             <ul class="list-unstyled pt-1 text-white">
                                 <li class="">
-                                    <div class="row">
-                                        <div class="col-icon">
-                                            <i class='pe-3 footericon bx bx-globe'></i>
-                                        </div>
-                                        <div class="col-tulisan">
-                                            <a target="_blank" href="http://ae.polman-bandung.ac.id/"
-                                                class="ps-2 text-white d-inline-block">
-                                                Website Jurusan AE
-                                            </a>
-                                        </div>
-                                    </div>
+                                    <span>
+                                        <a target="_blank" href="http://ae.polman-bandung.ac.id/"
+                                            class="text-white d-inline-block">
+                                            <i class="pe-3 footericon bi bi-globe"></i>
+                                            Website Jurusan AE
+                                        </a>
+                                    </span>
                                 </li>
                                 <li class="">
-                                    <div class="row pt-2">
-                                        <div class="col-icon">
-                                            <i class='pe-3 footericon bx bx-globe'></i>
-                                        </div>
-                                        <div class="col-tulisan">
-                                            <a target="_blank" href="https://polman-bandung.ac.id/"
-                                                class="ps-2 text-white d-inline-block">
-                                                Website POLMAN
-                                            </a>
-                                        </div>
-                                    </div>
+                                    <span>
+                                        <a target="_blank" href="https://polman-bandung.ac.id/"
+                                            class="pt-3 text-white d-inline-block">
+                                            <i class="pe-3 footericon bi bi-globe d-inline-block"></i>
+                                            Website POLMAN
+                                        </a>
+                                    </span>
                                 </li>
                                 <li class="">
-                                    <div class="row pt-2">
-                                        <div class="col-icon">
-                                            <i class='pe-3 footericon bx bx-sitemap'></i>
-                                        </div>
-                                        <div class="col-tulisan">
-                                            <a target="_blank"
-                                                href="https://himamo.org/assets/images/organigram/himamo-24.jpg"
-                                                class="ps-2 text-white d-inline-block">
-                                                Organigram Himamo
-                                            </a>
-                                        </div>
-                                    </div>
+                                    <span>
+
+                                        <a target="_blank"
+                                            href="https://himamo.org/assets/images/organigram/himamo-24.jpg"
+                                            class="pt-3 text-white d-inline-block">
+                                            <i class="pe-3 footericon bi bi-diagram-3-fill"></i>
+                                            Organigram Himamo
+                                        </a>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
@@ -823,40 +806,28 @@
                             <h4 class="text-white quote">Have a Question ?</h4>
                             <ul class="list-unstyled pt-1 text-white">
                                 <li class="">
-                                    <div class="row">
-                                        <div class="col-icon">
-                                            <i class='pe-3 footericon bx bxs-map-alt'></i>
-                                        </div>
-                                        <div class="col-tulisan">
-                                            <p class="ps-2">
-                                                Jl.Kanayakan No 21,Dago,Bandung
-                                            </p>
-                                        </div>
-                                    </div>
+                                    <span>
+                                        <p class="d-inline-block">
+                                            <i class="pe-3 footericon bi bi-map-fill"></i>
+                                            Jl.Kanayakan No 21,Dago,Bandung
+                                        </p>
+                                    </span>
                                 </li>
                                 <li class="">
-                                    <div class="row">
-                                        <div class="col-icon">
-                                            <i class='pe-3 footericon bx bxs-envelope'></i>
-                                        </div>
-                                        <div class="col-tulisan">
-                                            <p class="ps-2">
-                                                Officialhimamo@gmail.com
-                                            </p>
-                                        </div>
-                                    </div>
+                                    <span>
+                                        <p class="d-inline-block">
+                                            <i class="pe-3 footericon bi bi-envelope-fill"></i>
+                                            Officialhimamo@gmail.com
+                                        </p>
+                                    </span>
                                 </li>
                                 <li class="">
-                                    <div class="row">
-                                        <div class="col-icon">
-                                            <i class='pe-3 footericon bx bx-globe'></i>
-                                        </div>
-                                        <div class="col-tulisan">
-                                            <p class="ps-2">
-                                                Himamo.org
-                                            </p>
-                                        </div>
-                                    </div>
+                                    <span>
+                                        <p class="d-inline-block">
+                                            <i class="pe-3 footericon bi bi-globe"></i>
+                                            Himamo.org
+                                        </p>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
@@ -924,13 +895,5 @@
                 // Your code to run since DOM is loaded and ready
             });
         </script>
-        <script>
-            var preloader = document.getElementById("loading");
-
-            function load() {
-                preloader.style.display = 'none';
-            }
-        </script>
     </body>
-
 </html>
