--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <body>
 
     <body onload="load()" id="body-pd">
-        <div id="loading">
+        <div class="bg-light" id="loading">
             <img class="heartbeat" src="img/load.png">
         </div>
         <header class="header" id="header">
@@ -545,7 +545,7 @@
                                 <div class="item">
                                     <div class="work pb-4">
                                         <div class="img d-flex align-items-end justify-content-center"
-                                            style="background-image: url(./img/img-one.jpeg);">
+                                            style="background-image: url(./img/leader.jpg);">
                                             <div class="text w-100">
                                                 <span class="cat">KETUA HIMPUNAN</span>
                                                 <h3><a href="#">Adnan Maulana</a></h3>
@@ -558,11 +558,11 @@
                                 <div class="item">
                                     <div class="work">
                                         <div class="img d-flex align-items-end justify-content-center"
-                                            style="background-image: url(./img/img-two.jpeg);">
+                                            style="background-image: url(./img/leader2.jpg);">
                                             <div class="text w-100">
                                                 <span class="cat">KETUA HIMPUNAN</span>
                                                 <h3><a href="#">Dimas Nugraha</a></h3>
-                                                <span>Masa jabatan : 2014 s/d 2015</span>
+                                                <span>Masa jabatan : 2013 s/d 2014</span>
                                                 <span>NIM : 211341007</span>
                                             </div>
                                         </div>
@@ -571,11 +571,11 @@
                                 <div class="item">
                                     <div class="work">
                                         <div class="img d-flex align-items-end justify-content-center"
-                                            style="background-image: url(./img/img-three.jpeg);">
+                                            style="background-image: url(./img/leader3.jpg);">
                                             <div class="text w-100">
                                                 <span class="cat">KETUA HIMPUNAN</span>
                                                 <h3><a href="#">Mohamed Iqbal</a></h3>
-                                                <span>Masa jabatan : 2015 s/d 2016</span>
+                                                <span>Masa jabatan : 2014 s/d 2015</span>
                                                 <span>NIM : 212341042</span>
                                             </div>
                                         </div>
@@ -584,7 +584,7 @@
                                 <div class="item">
                                     <div class="work">
                                         <div class="img d-flex align-items-end justify-content-center"
-                                            style="background-image: url(./img/img-four.jpeg);">
+                                            style="background-image: url(./img/leader.jpg);">
                                             <div class="text w-100">
                                                 <span class="cat">KETUA HIMPUNAN</span>
                                                 <h3><a href="#">Jefri Maulana</a></h3>
@@ -597,12 +597,78 @@
                                 <div class="item">
                                     <div class="work">
                                         <div class="img d-flex align-items-end justify-content-center"
-                                            style="background-image: url(./img/img-five.jpeg);">
+                                            style="background-image: url(./img/leader5.jpg);">
                                             <div class="text w-100">
                                                 <span class="cat">KETUA HIMPUNAN</span>
-                                                <h3><a href="#">Septianhadi</a></h3>
+                                                <h3><a href="#">Saptianhadi</a></h3>
                                                 <span>Masa jabatan : 2016 s/d 2017</span>
                                                 <span>NIM : 214341047</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <div class="work pb-4">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/leader6.jpg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Eko Rahayu Tali jiwa</a></h3>
+                                                <span>Masa jabatan : 2017 s/d 2018</span>
+                                                <span>NIM : 215341004</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/leader7.jpg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Sulthan M . F</a></h3>
+                                                <span>Masa jabatan : 2018 s/d 2019</span>
+                                                <span>NIM : 216341069</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/leader8.jpg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Riyadh Tsaniyadi D</a></h3>
+                                                <span>Masa jabatan : 2019 s/d 2020</span>
+                                                <span>NIM : 217341068</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/leader9.jpg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Sendi Dika Prasenda</a></h3>
+                                                <span>Masa jabatan : 2020 s/d 2021</span>
+                                                <span>NIM : 218441046</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/leader10.jpg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Hery Ardiyanto</a></h3>
+                                                <span>Masa jabatan : 2020 s/d 2021</span>
+                                                <span>NIM : 219441010</span>
                                             </div>
                                         </div>
                                     </div>
