--- a/404.html
+++ b/404.html
@@ -277,7 +277,7 @@
         </header>
         <div class="l-navbar" id="nav-bar">
             <nav class="nav">
-                <div> <a href="#" class="img_logo">
+                <div> <a href="./index.html#" class="img_logo">
                         <img src="img/logo_01.png">
                         <span class="nav_logo-name">
                             <img src="img/logo_02.png">
@@ -298,7 +298,7 @@
                                 class="nav_name">Blog</span> </a>
                         <!-- <a href="http://ae.polman-bandung.ac.id/" class="nav_link"> <i class='bx bxs-school'></i><span
                                 class="nav_name">Website AE</span> </a> -->
-                        <a href="#" class="nav_link"> <i class='bx bxs-phone nav_icon'></i>Contact</span> </a>
+                        <a href="./contact-form.html" class="nav_link"> <i class='bx bxs-phone nav_icon'></i>Contact</span> </a>
 
                     </div>
                 </div> <a href="#" class="nav_link"> <i class='bx bx-log-in nav_icon'></i> <span
