--- a/contact-form.html
+++ b/contact-form.html
@@ -55,7 +55,7 @@
             font-family: var(--body-font);
             font-size: var(--normal-font-size);
             transition: .5s;
-            overflow-x: hidden;
+            overflow-x: hidden !important;
         }
 
         a {
