--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- animate on scroll -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+        integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom css -->
     <style>
         :root {
@@ -372,7 +374,9 @@
             <section id="about" class="about">
                 <div class="container pb-3">
                     <div class="container pb-2 px-5 pt-5">
-                        <div class="row">
+                        <div data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000"
+                            data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                            data-aos-anchor-placement="top-center" class="row">
                             <div class="col-md text-md-start">
                                 <img class="logoae pt-3" src="img/logoae.png">
                             </div>
@@ -409,7 +413,9 @@
                     </div>
 
                     <div class="container px-5">
-                        <div class="row">
+                        <div data-aos="fade-up" data-aos-offset="-200" data-aos-duration="1000"
+                            data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                            data-aos-anchor-placement="top-center" class="row">
                             <div class="col-md-7">
                                 <h2 class="text-dark quote text-md-start pt-5">Apa itu <span class="judul">Himpunan
                                         Otomasi Manufaktur
@@ -433,7 +439,9 @@
                     </div>
 
                     <div class="container pb-5">
-                        <div class="row">
+                        <div data-aos="fade-up" data-aos-offset="-200" data-aos-duration="1000"
+                            data-aos-easing="ease-out" data-aos-mirror="true" data-aos-once="false"
+                            data-aos-anchor-placement="top-center" class="row">
                             <div class="col-6 pt-5 text-center">
                                 <i class='icon2 bx bxs-contact'></i>
                                 <h2 class="value" count="218"></h2>
@@ -463,7 +471,9 @@
                 <div class="parallax">
                     <div class="container pt-4 pb-5 px-5">
                         <div class="row">
-                            <div class="col pt-4">
+                            <div data-aos="fade-right" data-aos-offset="-200" data-aos-duration="1000"
+                                data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                                data-aos-anchor-placement="top-center" class="col pt-4">
                                 <div class="row no-gutters slider-text text-md-start">
                                     <!-- <div class="row">
                                         <div class="col-md">
@@ -477,7 +487,9 @@
                                     <h1 class="quote">14 <span>November</span> <span>19</span>95</h1>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div data-aos="fade-left" data-aos-offset="-200" data-aos-duration="1000"
+                                data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                                data-aos-anchor-placement="top-center" class="col-md-6">
                                 <h2 class="text-white quote text-md-end pt-5">Sejarah <span class="judul">HIMAMO</span>
                                 </h2>
                                 <p class="text-white pt-2 text-md-end">
@@ -492,7 +504,9 @@
             </section>
             <section id="division">
                 <div class="container pt-5 pb-5 px-5">
-                    <div class="row">
+                    <div data-aos="slide-right" data-aos-offset="-300" data-aos-duration="1000"
+                        data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                        data-aos-anchor-placement="top-center" class="row">
                         <div class="col pt-5 text-center">
                             <h2 class="text-dark quote text-md-start">Divisi <span class="judul">HIMAMO</span>
                             </h2>
@@ -545,7 +559,9 @@
             </section>
             <section id="leader">
                 <div class="container pt-4 pb-5 px-5">
-                    <div class="row">
+                    <div data-aos="slide-left" data-aos-offset="-300" data-aos-duration="1000"
+                        data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                        data-aos-anchor-placement="top-center" class="row">
                         <div class="col-md-8 text-md-start">
                             <div class="featured-carousel owl-carousel">
                                 <div class="item">
@@ -695,12 +711,16 @@
             <section id="prestation" class="about">
                 <div class="parallax2">
                     <div class="container pt-5 pb-5 px-5">
-                        <div class="row justify-content-center mb-4">
+                        <div data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000"
+                            data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                            data-aos-anchor-placement="top-center" class="row justify-content-center mb-4">
                             <div class="col-md-7 text-center">
                                 <h1 class="mb-3 text-white quote">Apa Kata <span class="judul">Mereka?</span></h1>
                             </div>
                         </div>
-                        <div class="row">
+                        <div data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000"
+                        data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                        data-aos-anchor-placement="top-center" class="row">
                             <div class="col-md-12">
                                 <div class="carousel-testimony owl-theme owl-carousel">
                                     <div class="item">
@@ -811,14 +831,18 @@
             </section>
             <section id="video">
                 <div class="container pt-5 pb-5 px-5">
-                    <div class="row justify-content-center mb-4">
+                    <div data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000"
+                    data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                    data-aos-anchor-placement="top-center" class="row justify-content-center mb-4">
                         <div class="col-md-7 text-center">
                             <h1 class="mb-3 text-dark quote">Our <span class="judul">Moments</span></h1>
                         </div>
                     </div>
                     <div class="row">
                         <div class="text-center embed-responsive">
-                            <iframe class="pideo" src="https://www.youtube.com/embed/3MlI-7cVGos"
+                            <iframe data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000"
+                            data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+                            data-aos-anchor-placement="top-center" class="pideo" src="https://www.youtube.com/embed/3MlI-7cVGos"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
@@ -956,6 +980,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
+        <!-- animateonscroll -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+            integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script type='text/javascript'>
             document.addEventListener("DOMContentLoaded", function (event) {
 
@@ -1002,6 +1030,9 @@
             function load() {
                 preloader.style.display = 'none';
             }
+        </script>
+        <script>
+            AOS.init();
         </script>
     </body>
 
