--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <div class="parallax">
                     <div class="container pt-4 pb-5 px-5">
                         <div class="row">
-                            <div data-aos="fade-right" data-aos-offset="-200" data-aos-duration="1000"
+                            <div data-aos="fade-up" data-aos-offset="-200" data-aos-duration="1000"
                                 data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
                                 data-aos-anchor-placement="top-center" class="col pt-4">
                                 <div class="row no-gutters slider-text text-md-start">
@@ -487,7 +487,7 @@
                                     <h1 class="quote">14 <span>November</span> <span>19</span>95</h1>
                                 </div>
                             </div>
-                            <div data-aos="fade-left" data-aos-offset="-200" data-aos-duration="1000"
+                            <div data-aos="fade-up" data-aos-offset="-200" data-aos-duration="1000"
                                 data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
                                 data-aos-anchor-placement="top-center" class="col-md-6">
                                 <h2 class="text-white quote text-md-end pt-5">Sejarah <span class="judul">HIMAMO</span>
@@ -504,7 +504,7 @@
             </section>
             <section id="division">
                 <div class="container pt-5 pb-5 px-5">
-                    <div data-aos="slide-right" data-aos-offset="-300" data-aos-duration="1000"
+                    <div data-aos="fade-up" data-aos-offset="-300" data-aos-duration="1000"
                         data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
                         data-aos-anchor-placement="top-center" class="row">
                         <div class="col pt-5 text-center">
@@ -559,7 +559,7 @@
             </section>
             <section id="leader">
                 <div class="container pt-4 pb-5 px-5">
-                    <div data-aos="slide-left" data-aos-offset="-300" data-aos-duration="1000"
+                    <div data-aos="fade-up" data-aos-offset="-300" data-aos-duration="1000"
                         data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
                         data-aos-anchor-placement="top-center" class="row">
                         <div class="col-md-8 text-md-start">
